<resources>
    <string name="app_name"> VGold</string>
    <string name="welcome_to_vighnaharta_gold">Welcome to Vighnaharta Gold</string>
    <string name="be_a_partner">Be a Partner</string>
    <string name="btn_ok">OK</string>
    <string name="gold_rate_card">Gold rate Card</string>
    <string name="_9763583584">9763583584</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="get_and_generate_otp">Get and Generate OTP</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="rs_5129_40_gm">Rs. 5129.40/gm</string>
    <string name="purchase_rate">Purchase Rate :</string>
    <string name="sale_rate">Sale Rate :</string>
    <string name="today_s_gold_rate_99_5ct">Today\'s Gold Rate 99.5ct</string>
    <string name="rs_4804_gm">Rs 4804/gm</string>
    <string name="rs">\u20B9</string>
    <string name="add_remark">Remark</string>
    <string name="add_purity">Purity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="long_string">Today -03/10/2022(99.5ct Gold Rate) Purchase Rate: rs.5211.80/gm Sale rate: rs 4881/gm</string>
    <string name="book_your_egold_just_at_rs_1000_per_10_grams_n_price_qty_and_quality_lock_facility_n_no_cost_emi_n_emi_s_upto_36_months_n_gold_purity_99_5_n_delivery_from_your_choice_vendor_across_india"># Book your eGold just at Rs. 1000/- per 10 grams\n # Price, Qty, and Quality Lock Facility\n # No Cost EMI\n # EMI\'s upto 36 months\n # Gold Purity 99.5%\n # Delivery from your choice Vendor - across India</string>
    <string name="book_your_egold_just_at_rs_1000_per_10_grams_n_price_qty_and_quality_lock_facility_n_no_cost_emi_n_emi_s_upto_36_months_n_gold_purity_99_5_n_delivery_from_your_choice_vendor_acrossindia"># Book your eGold just at Rs. 1000/- per 10 grams\n # Price, Qty, and Quality Lock Facility\n # No Cost EMI\n # EMI\'s upto 36 months\n # Gold Purity 99.5%\n # Delivery from your choice Vendor - across India</string>
    <string name="shiv_gmail_com">shiv@gmail.com</string>
    <string name="email">Email</string>
    <string name="request_otp">Request OTP</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="gpay">GPAY</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_password">Enter Password</string>
    <string name="admin">admin</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="golden_future">GOLDEN FUTURE</string>
    <string name="register_yourself_and_unlock_your">Register yourself and Unlock your</string>
    <string name="otp_send_to">OTP Send to</string>
    <string name="add">Add</string>
    <string name="egold_wallet">eGold Wallet</string>
    <string name="gift">Gift</string>
    <string name="gold_rate_card1">Gold Rate Card</string>
    <string name="be_a_partner1">Be A Partner</string>
    <string name="digital_gold_gold_loan_foundation">Digital Gold | Gold Loan | Foundation</string>
    <string name="enter_bank_details">Enter Bank Details</string>
    <string name="enter_cheque_number">Enter Cheque Number</string>
    <string name="enter_bankdetails">Enter Bank Details</string>
    <string name="not_received">Not Received ?</string>
    <string name="resend">Resend</string>
    <string name="_99_5ct">99.5ct</string>
    <string name="add_gold">Add Gold</string>
    <string name="add_money">Add Money</string>
    <string name="rs_7854">RS 7854</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="enter_branch">Enter Branch</string>
    <string name="enter_account_type">Enter Account type</string>
    <string name="enter_ifsc_code">Enter IFSC code</string>
    <string name="enter_account_holders_name">Enter Account Holders Name</string>
    <string name="enter_complaint">Enter Complaint</string>
    <string name="submit">Submit</string>
    <string name="submit_">Submit</string>


    <string-array name="payment_option_wallet">
        <item>--Please select Payment Option--</item>
        <item>cheque</item>
        <item>NEFT/RTGS/Online Transfer</item>
        <item>Gold Wallet</item>
        <item>Money Wallet</item>
        <item>UPI Payment</item>
        <!--        <item>Credit/Debit/Net Banking(Payment Gateway)</item>-->
    </string-array>

    <string-array name="Tennure_array">
        <item>--Select--</item>
        <item>12 month</item>
        <item>24 month</item>
        <item>36 month</item>
        <item>48 month</item>
        <item>60 month</item>
        <item>72 month</item>
        <item>84 month</item>
        <item>96 month</item>
        <item>108 month</item>
        <item>120 month</item>
    </string-array>
    <string-array name="GoldWeight_array">
        <item>--Data Not Available--</item>
    </string-array>
    <string-array name="Bank_array">
        <item>--No Bank Found--</item>


    </string-array>

    <string-array name="GoldWeight_array1">
        <item>--Select--</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>Custom</item>
    </string-array>
    <string-array name="loan_array">
        <item>Home</item>
        <item>Personal</item>
        <item>Medical Emergency</item>
        <item>Educational</item>
        <item>Vehicle</item>
        <item>Other</item>
    </string-array>
    <string-array name="payment_option">
        <item>--Please Select Payment Option--</item>
        <item>Cheque</item>
        <item>NEFT/RTGS/Online Transfer</item>
        <!--        <item>Gold Wallet</item>-->
        <!--        <item>Money Wallet</item>-->
        <item>UPI Payment</item>
        <!--        <item>Credit/Debit/Net Banking(Payment Gateway)</item>-->
    </string-array>

    <string-array name="payment_option1">
        <item>--Please select Payment Option--</item>
        <item>cheque</item>
        <item>NEFT/RTGS/Online Transfer</item>
        <!--        <item>Credit/Debit/Net Banking(Payment Gateway)</item>-->
    </string-array>
</resources>