<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/vLogoIv"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/vlogo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="Digital Gold | Gold Loan | Foundation"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vLogoIv" />


                <ImageView
                    android:id="@+id/lgn_scrn"
                    android:layout_width="300dp"
                    android:layout_height="250dp"
                    android:src="@drawable/asset2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_title" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/register_yourself_and_unlock_your"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorblack"

                    android:textSize="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lgn_scrn" />

                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/golden_future"
                    android:textColor="#7a1632"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/tv_login" />

                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textview2">


                    <!--            <com.hbb20.CountryCodePicker-->
                    <!--                android:layout_width="wrap_content"-->
                    <!--                android:layout_height="wrap_content"-->
                    <!--                android:layout_marginStart="20dp"-->
                    <!--                android:layout_marginTop="16dp"-->
                    <!--                android:singleLine="true"-->
                    <!--                android:background="@drawable/round_border"-->
                    <!--                android:backgroundTint="@color/colorPrimary"-->
                    <!--                app:ccp_showNameCode="false"-->
                    <!--                app:ccp_showPhoneCode="false" />-->


                    <TextView
                        android:id="@+id/concode"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:text="+91"
                        android:textSize="14dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_mobNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:textColorHint="#7a1632"
                        app:boxStrokeColor="@color/black"
                        app:hintTextAppearance="@style/mytext"
                        app:layout_constraintTop_toBottomOf="@id/textview2">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:drawableStart="@drawable/ic_call"
                            android:hint="@string/mobile_number"

                            android:inputType="numberDecimal"
                            android:singleLine="true"
                            android:textSize="14dp" />


                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/colorblack"
                    android:visibility="gone"
                    app:hintTextAppearance="@style/mytext"
                    app:layout_constraintTop_toBottomOf="@id/textview2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtLoginPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:text="@string/admin"
                        android:textColor="@color/colorblack"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/otpLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/colorblack"
                    android:visibility="gone"
                    app:hintTextAppearance="@style/mytext"
                    app:layout_constraintTop_toBottomOf="@id/ll1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtLoginOTP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_otp"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="@color/colorblack"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/tv_forgotpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:gravity="end"
                    android:text="@string/forgot_password"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll1" />

                <Button
                    android:id="@+id/BtnLogin"
                    style="@style/Button"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/roundborder1"
                    android:backgroundTint="#7a1632"
                    android:gravity="center"
                    android:text="@string/request_otp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_forgotpassword" />


                <ProgressBar
                    android:id="@+id/lgPrBar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="50dp"
                    android:progressDrawable="@drawable/custom_progress_bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_forgotpassword" />

                <LinearLayout
                    android:id="@+id/signuplaout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/BtnLogin">

                    <TextView
                        android:id="@+id/txt_SignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/don_t_have_an_account"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textSize="15dp"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.35"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/BtnLogin" />


                    <TextView
                        android:id="@+id/tv_SignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:paddingStart="2dp"
                        android:text="@string/sign_up"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15dp"
                        app:layout_constraintStart_toEndOf="@id/txt_SignUp"
                        app:layout_constraintTop_toBottomOf="@id/BtnLogin" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnGpay"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/border_for_button"
                    android:gravity="center"
                    android:text="@string/gpay"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorwhite"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signuplaout" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
